; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/um/drivers/extr_mcast_kern.c_mcast_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/um/drivers/extr_mcast_kern.c_mcast_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.uml_net_private = type { i64 }
%struct.mcast_data = type { i32, i32, i32, %struct.net_device* }
%struct.mcast_init = type { i32, i32, i32 }

@.str = private unnamed_addr constant [48 x i8] c"mcast backend multicast address: %s:%u, TTL:%u\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net_device*, i8*)* @mcast_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mcast_init(%struct.net_device* %0, i8* %1) #0 {
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.uml_net_private*, align 8
  %6 = alloca %struct.mcast_data*, align 8
  %7 = alloca %struct.mcast_init*, align 8
  store %struct.net_device* %0, %struct.net_device** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.mcast_init*
  store %struct.mcast_init* %9, %struct.mcast_init** %7, align 8
  %10 = load %struct.net_device*, %struct.net_device** %3, align 8
  %11 = call %struct.uml_net_private* @netdev_priv(%struct.net_device* %10)
  store %struct.uml_net_private* %11, %struct.uml_net_private** %5, align 8
  %12 = load %struct.uml_net_private*, %struct.uml_net_private** %5, align 8
  %13 = getelementptr inbounds %struct.uml_net_private, %struct.uml_net_private* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = inttoptr i64 %14 to %struct.mcast_data*
  store %struct.mcast_data* %15, %struct.mcast_data** %6, align 8
  %16 = load %struct.mcast_init*, %struct.mcast_init** %7, align 8
  %17 = getelementptr inbounds %struct.mcast_init, %struct.mcast_init* %16, i32 0, i32 2
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.mcast_data*, %struct.mcast_data** %6, align 8
  %20 = getelementptr inbounds %struct.mcast_data, %struct.mcast_data* %19, i32 0, i32 2
  store i32 %18, i32* %20, align 8
  %21 = load %struct.mcast_init*, %struct.mcast_init** %7, align 8
  %22 = getelementptr inbounds %struct.mcast_init, %struct.mcast_init* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = load %struct.mcast_data*, %struct.mcast_data** %6, align 8
  %25 = getelementptr inbounds %struct.mcast_data, %struct.mcast_data* %24, i32 0, i32 1
  store i32 %23, i32* %25, align 4
  %26 = load %struct.mcast_init*, %struct.mcast_init** %7, align 8
  %27 = getelementptr inbounds %struct.mcast_init, %struct.mcast_init* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.mcast_data*, %struct.mcast_data** %6, align 8
  %30 = getelementptr inbounds %struct.mcast_data, %struct.mcast_data* %29, i32 0, i32 0
  store i32 %28, i32* %30, align 8
  %31 = load %struct.net_device*, %struct.net_device** %3, align 8
  %32 = load %struct.mcast_data*, %struct.mcast_data** %6, align 8
  %33 = getelementptr inbounds %struct.mcast_data, %struct.mcast_data* %32, i32 0, i32 3
  store %struct.net_device* %31, %struct.net_device** %33, align 8
  %34 = load %struct.mcast_data*, %struct.mcast_data** %6, align 8
  %35 = getelementptr inbounds %struct.mcast_data, %struct.mcast_data* %34, i32 0, i32 2
  %36 = load i32, i32* %35, align 8
  %37 = load %struct.mcast_data*, %struct.mcast_data** %6, align 8
  %38 = getelementptr inbounds %struct.mcast_data, %struct.mcast_data* %37, i32 0, i32 1
  %39 = load i32, i32* %38, align 4
  %40 = load %struct.mcast_data*, %struct.mcast_data** %6, align 8
  %41 = getelementptr inbounds %struct.mcast_data, %struct.mcast_data* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 8
  %43 = call i32 @printk(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str, i64 0, i64 0), i32 %36, i32 %39, i32 %42)
  ret void
}

declare dso_local %struct.uml_net_private* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @printk(i8*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
